# how-much-work

./: .drone.yml  .gitignore  README.md  REUSE.toml  conftest.py  pyproject.toml  setup.cfg  tox.ini
how_much_work/: constants.py  exceptions.py  utils.py
how_much_work/app/: __main__.py  options.py
how_much_work/app/depgraph/: builder.py  cli.py  options.py
how_much_work/app/tests/: test_depgraph_pypi.py
how_much_work/app/tests/cassettes/test_depgraph_pypi/: TestDepgraphPypi.test_depgraph_maxdepth.yaml  TestDepgraphPypi.test_depgraph_nocond.yaml  TestDepgraphPypi.test_depgraph_nodeps.yaml
how_much_work/core/: constants.py  exceptions.py  options.py  plugin_api.py  types.py  utils.py
how_much_work/core/tests/: fixtures.py
how_much_work/plugins/pypi/: __init__.py  _types.py  constants.py  filters.py  registry.py
how_much_work/plugins/pypi/tests/: test_registry.py
how_much_work/plugins/pypi/tests/cassettes/test_registry/: test_get_children.yaml  test_normalize.yaml
how_much_work/plugins/repology/: __init__.py  types.py
how_much_work/tests/: fixtures.py  utils.py
