# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2024-2025 Anna <cyber@sysrq.in>

[build-system]
requires = ["hatchling>=1.5"]
build-backend = "hatchling.build"

[project]
name = "how-much-work"
description = "Estimate the amount of work needed to package a project"
authors = [
    {name = "Anna", email = "cyber@sysrq.in"},
]
dynamic = ["version"]
readme = "README.md"
license = "WTFPL"
license-files = { globs = ["LICENSES/*"] }
requires-python = ">=3.11"
dependencies = [
    "aiohttp<4,>=3",
    "click",
    "click-aliases",
    "networkx>=3",
    "pluggy<2",
    "pydantic>=2,<3",
    "pygraphviz>=1.14",

    # 'pypi' plugin
    "aiohttp<4,>=3",
    "lru-dict",
    "poetry-core>=1",
    "pydantic>=2,<3",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["packaging", "repository", "maintainer"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",

    # 'pypi' plugin
    "pytest-recording",
]

[project.scripts]
how-much-work = "how_much_work.app.__main__:cli"

[project.entry-points."how_much_work.plugins"]
pypi = "how_much_work.plugins.pypi"

[project.urls]
Home = "https://how-much-work.sysrq.in"
Source = "https://git.sysrq.in/how-much-work"
Issues = "https://bugs.sysrq.in/enter_bug.cgi?product=Software&component=how-much-work"
Changelog = "https://how-much-work.sysrq.in/release-notes.html"

[tool.hatch.version]
path = "how_much_work/core/constants.py"

[tool.hatch.build.targets.wheel]
packages = ["how_much_work"]

[tool.hatch.build.targets.sdist]
include = [
    "/how_much_work",

    "/conftest.py",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --block-network -p no:vcr"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "builder_args",
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "how_much_work.plugins.pypi.tests.*",
    "how_much_work.app.tests.*",
]
# requiring explicit types for all test methods would be cumbersome
disallow_untyped_defs = false
check_untyped_defs = true

[tool.bandit]
exclude_dirs = [
    "how_much_work/plugins/pypi/tests",
    "how_much_work/app/tests",
]

[tool.tox]
requires = ["tox>=4.21"]
minversion = "4.21"
env_list = ["3.11", "3.12", "3.13", "lint"]

[tool.tox.env_run_base]
description = "run the tests + mypy under {base_python}"
ignore_errors = true
deps = [
    "mypy",
    "types-networkx",
]
extras = [
    "test",
]
commands = [
    ["pytest", "-vv", "{tty:--color=yes}", "{posargs:how_much_work}"],
    ["mypy", "--explicit-package-bases", "{posargs:how_much_work}"],
]

[tool.tox.env.lint]
description = "run the linters"
ignore_errors = true
skip_install = true
deps = [
    "bandit",
    "pycodestyle",
    "pyflakes",
    "reuse",
]
commands = [
    ["pyflakes", "{posargs:how_much_work}"],
    ["pycodestyle", "{posargs:how_much_work}"],
    ["bandit", "-c", "pyproject.toml", "-r", "{posargs:how_much_work}"],
    ["reuse", "lint"],
]
